[tool.poetry]
name = "particle swarm python scripts"
version = "0.1.0"
description = ""
authors = ["phukon <hello@rikiphukon.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
